# MC

./: .gitignore  CMakeLists.txt  READ ME.txt  UML.mdj  imgui.ini  world.txt
CMake/: CMakeLists_sources.cmake
Source/: Biome.cpp  Biome.h  BlockId.h  BlockLookup.cpp  BlockLookup.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Creature.cpp  Creature.h  DynamicBlock.h  Enemy.cpp  Enemy.h  Face.h  Graphics.cpp  Graphics.h  InputManager.cpp  InputManager.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Main.cpp  Mesh.cpp  Mesh.h  Minecraft.cpp  Minecraft.h  Noise.cpp  Noise.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Recipe.cpp  Recipe.h  StateMachine.h  TargetBlock.h  Texture.cpp  Texture.h  (+10 more)
_scripts/: generate_cmake_sources.sh
shaders/: Block.frag  Block.geom  Block.vert  Entity.vert  Falling.vert  Fluid.geom  Item.frag  Item.vert  Simple.frag  Target.geom
